fix the bug now review is posibble. still not showing data when open dialog (only after action)

--- a/routing/components/PointPage/stylePointPage.css
+++ b/routing/components/PointPage/stylePointPage.css
@@ -1,11 +1,24 @@
-table , td  {
+table , td   {
+
+    background-color:  rgb(255, 98, 93);
     border: 4px solid rgb(122, 75, 114);
     border-collapse: collapse;
-    padding: 10px;
-    background-color:  rgb(250, 213, 255);;
-  }
 
-  .title {
+}
+
+table{
+    transform: rotate(90deg);
+    width: 80px;
+    height: 120px;
+    padding: 80px;
+}
+td{
+    transform: rotate(270deg);
+    width: 60px;
+    padding: 70px;
+}
+
+.title {
     /*position: absolute;
     text-align: center;*/
     font-size: 40px ;
@@ -21,4 +34,50 @@ body {
 
 .center{
     text-align:center;
+}
+
+p{
+    font-weight: bold;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 18px;
+}
+
+.left-align{
+    text-align: left;
+}
+
+.label{
+    color: white;
+    padding: 8px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    background-color: cadetblue;
+    box-shadow: 4px black;
+}
+
+
+.center-r {
+    position: absolute;
+    bottom: 50px;
+    left: 50%;
+    font-size: 100px ;
+    text-align: left;
+    width: 500px;
+    height: 500px;
+    border-radius: 50%;
+    text-shadow: 7px;
+}
+
+.purple-title{
+    color: rgb(125, 26, 138);
+    font-weight: bold;
+}
+
+.wi{
+    width: 500px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
+}
+
+h1, span {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
